--- a/Requirements/expert_roles_mapping.json
+++ b/Requirements/expert_roles_mapping.json
@@ -1,1 +1,336 @@
-
+[
+  {
+    "role": "Главный архитектор СУБД",
+    "responsibilities": [
+      "Общая архитектура, декомпозиция, связность компонентов",
+      "Сопоставление требований SAP HANA+ с архитектурой",
+      "Контроль целостности, модульности, перформанса"
+    ],
+    "architecture_blocks": [
+      "0.1",
+      "0.2",
+      "0.3",
+      "1.1",
+      "1.2",
+      "1.14",
+      "1.16",
+      "8.1"
+    ],
+    "relevant_packages": [
+      "0",
+      "1",
+      "8"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Эксперт по in-memory системам",
+    "responsibilities": [
+      "NUMA-aware аллокация, CPU-affinity",
+      "Row-store, column-store, JSON store",
+      "Tiered NVMe fallback, TTL, eviction"
+    ],
+    "architecture_blocks": [
+      "1.1",
+      "1.3",
+      "1.4",
+      "1.13",
+      "1.16"
+    ],
+    "relevant_packages": [
+      "1"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Разработчик MVCC и транзакций",
+    "responsibilities": [
+      "MVCC compressed chains",
+      "Snapshot isolation, SERIALIZABLE fallback",
+      "Garbage collection, vacuum"
+    ],
+    "architecture_blocks": [
+      "2.1",
+      "2.2",
+      "2.3",
+      "2.8"
+    ],
+    "relevant_packages": [
+      "2"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Разработчик WAL и snapshot",
+    "responsibilities": [
+      "Параллельные WAL writer’ы",
+      "Diff-based snapshot, instant recovery",
+      "Log compaction"
+    ],
+    "architecture_blocks": [
+      "2.4",
+      "2.5",
+      "2.6",
+      "2.7"
+    ],
+    "relevant_packages": [
+      "2"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Разработчик SQL-парсера и DSL",
+    "responsibilities": [
+      "SQL:2011+, оконные функции, JSON",
+      "Собственный DSL (в стиле ABAP/PLSQL)",
+      "Процедуры, триггеры, exec hooks"
+    ],
+    "architecture_blocks": [
+      "3.1",
+      "3.2",
+      "3.3",
+      "3.10"
+    ],
+    "relevant_packages": [
+      "3"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Разработчик планировщика и оптимизатора",
+    "responsibilities": [
+      "Logical planner, rule/cost-based оптимизация",
+      "Adaptive reoptimization, feedback",
+      "Join reordering, cardinality, histograms"
+    ],
+    "architecture_blocks": [
+      "3.4",
+      "3.5",
+      "3.6",
+      "3.7",
+      "3.8"
+    ],
+    "relevant_packages": [
+      "3"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Эксперт по безопасности БД",
+    "responsibilities": [
+      "RBAC, ABAC, row/column-level security",
+      "TLS/mTLS, JWT, TDE",
+      "Аудит, scoped tokens, access policy engine"
+    ],
+    "architecture_blocks": [
+      "6.1",
+      "6.2",
+      "6.3",
+      "6.4",
+      "6.5"
+    ],
+    "relevant_packages": [
+      "6"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Разработчик репликации и отказоустойчивости",
+    "responsibilities": [
+      "Active-active / passive",
+      "Raft, Paxos, quorum consensus",
+      "Failover, split-brain prevention"
+    ],
+    "architecture_blocks": [
+      "2.9",
+      "2.10",
+      "2.11"
+    ],
+    "relevant_packages": [
+      "2"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Инженер по API и интеграциям",
+    "responsibilities": [
+      "REST, gRPC, WebSocket, CLI, GraphQL",
+      "OpenAPI, JSON:API, external procedures",
+      "BPMN, ETL генерация"
+    ],
+    "architecture_blocks": [
+      "4.1",
+      "4.2",
+      "4.3",
+      "4.4"
+    ],
+    "relevant_packages": [
+      "4"
+    ],
+    "criticality": "medium",
+    "core": true
+  },
+  {
+    "role": "Инженер CDC / стриминга / ingestion",
+    "responsibilities": [
+      "Kafka, Pulsar, Debezium, Redis Streams",
+      "Changefeed, webhook ingestion",
+      "S3, CSV, Parquet, XML импорты"
+    ],
+    "architecture_blocks": [
+      "4.5",
+      "4.6",
+      "4.7"
+    ],
+    "relevant_packages": [
+      "4"
+    ],
+    "criticality": "medium",
+    "core": false
+  },
+  {
+    "role": "Инженер по Observability и DevOps",
+    "responsibilities": [
+      "Prometheus, OpenTelemetry, structured logging",
+      "Query tracing, timeline viewer",
+      "Flamegraph, metrics, CI/CD"
+    ],
+    "architecture_blocks": [
+      "7.1",
+      "7.2",
+      "7.3",
+      "7.4"
+    ],
+    "relevant_packages": [
+      "7"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Инженер по тестируемости и стабильности",
+    "responsibilities": [
+      "Unit, integration, mutation, fuzz, soak tests",
+      "Crash recovery, schema rollback",
+      "ASAN/TSAN, fault injection"
+    ],
+    "architecture_blocks": [
+      "10.1",
+      "10.2",
+      "10.3"
+    ],
+    "relevant_packages": [
+      "10"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Разработчик индексных структур",
+    "responsibilities": [
+      "B+Tree, Hash, Bitmap, Inverted, Adaptive indexing",
+      "Dictionary, RLE, delta, frame-of-reference compression"
+    ],
+    "architecture_blocks": [
+      "1.5",
+      "1.6",
+      "1.19"
+    ],
+    "relevant_packages": [
+      "1"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Разработчик buffer pool и cache",
+    "responsibilities": [
+      "LRU, ARC, preload pages, dirty tracking",
+      "Page cache, TTL, eviction"
+    ],
+    "architecture_blocks": [
+      "1.7",
+      "1.13"
+    ],
+    "relevant_packages": [
+      "1"
+    ],
+    "criticality": "high",
+    "core": true
+  },
+  {
+    "role": "Инженер по BI / OLAP / HTAP",
+    "responsibilities": [
+      "HTAP workloads, materialized views",
+      "ROLLUP, CUBE, adaptive aggregates"
+    ],
+    "architecture_blocks": [
+      "5.1",
+      "5.2",
+      "5.5"
+    ],
+    "relevant_packages": [
+      "5"
+    ],
+    "criticality": "medium",
+    "core": false
+  },
+  {
+    "role": "ML-инженер / Inference runtime",
+    "responsibilities": [
+      "ONNX, PyTorch, Tensorflow inference",
+      "Forecasting, clustering, SQL prediction"
+    ],
+    "architecture_blocks": [
+      "5.3",
+      "5.4"
+    ],
+    "relevant_packages": [
+      "5"
+    ],
+    "criticality": "medium",
+    "core": false
+  },
+  {
+    "role": "Эксперт по time-series обработке",
+    "responsibilities": [
+      "Gap-fill, downsampling, retention",
+      "Native TS types, time-window functions"
+    ],
+    "architecture_blocks": [
+      "5.3"
+    ],
+    "relevant_packages": [
+      "5"
+    ],
+    "criticality": "medium",
+    "core": false
+  },
+  {
+    "role": "Разработчик расширений UDF/UDAF",
+    "responsibilities": [
+      "Lua, WASM, JS, sandbox, external modules",
+      "LoadLibrary, C API, scoped execution"
+    ],
+    "architecture_blocks": [
+      "3.9",
+      "9.1",
+      "9.2",
+      "9.3"
+    ],
+    "relevant_packages": [
+      "3",
+      "9"
+    ],
+    "criticality": "medium",
+    "core": false
+  }
+]
